commit before new coding

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>나의 개발 회고 블로그</title>
+  <title>Evan's Log</title>
 
   <!-- 공통 스타일 -->
   <link rel="stylesheet" href="css/common.css">
@@ -14,6 +14,10 @@
 
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <!-- Markdown renderer -->
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <!-- DOMPurify for sanitizing rendered HTML -->
+  <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
 </head>
 <body>
