--- a/html/section/projects.html
+++ b/html/section/projects.html
@@ -1,8 +1,9 @@
-<h2>언어(Language)</h2>
-<ul class="list">
-  <li>JavaScript</li>
-  <li>Python</li>
-  <li>Java</li>
-  <li>Go</li>
-  <li>Rust</li>
-</ul>
+<section class="projects-section">
+  <div class="container">
+    <h2>프로젝트</h2>
+    <div id="projects-list">
+      <p class="muted">로딩 중...</p>
+    </div>
+    <div id="project-detail" style="display:none"></div>
+  </div>
+</section>
