--- a/html/header.html
+++ b/html/header.html
@@ -18,5 +18,5 @@
       </select>
     </div>
   </div>
-  <a href="https://github.com/yeviDev"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" style="width: 50px; height: 50px; margin:0 10px;" alt="GitHub"></a>
+  <a href="https://github.com/evan-andrian" target="_blank" rel="noopener noreferrer"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" style="width: 50px; height: 50px; margin:0 10px;" alt="GitHub"></a>
 </header>
