--- a/projects.html
+++ b/projects.html
@@ -2,20 +2,13 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>Evan's Log</title>
+  <title>프로젝트</title>
 
   <!-- 공통 스타일 -->
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
-  <link rel="stylesheet" href="css/sections/about.css">
-  <link rel="stylesheet" href="css/sections/category.css">
-  <link rel="stylesheet" href="css/sections/home.css">
   <link rel="stylesheet" href="css/sections/projects.css">
-  <link rel="stylesheet" href="css/sections/retrspective.css">
-  <link rel="stylesheet" href="css/sections/today.css">
-  
-  <!-- 섹션별 CSS 동적 로드 -->
   <link id="section-style" rel="stylesheet">
 
   <!-- jQuery -->
@@ -27,15 +20,30 @@
   <script type="text/javascript" src="js/utils.js"></script>
   <script type="text/javascript" src="js/readme.js"></script>
   <script type="text/javascript" src="js/header_footer.js"></script>
-  <script type="text/javascript" src="js/data.js"></script>
-  <script type="text/javascript" src="js/navigation.js"></script>
   <script type="text/javascript" src="js/projects.js"></script>
-  <script type="text/javascript" src="js/manage.js"></script>
-  <script type="text/javascript" src="js/index.js"></script>
 </head>
 <body>
   <div id="header"></div>
-  <main id="content"></main>
+  <main id="content">
+    <!-- 프로젝트 리스트 섹션 (템플릿은 html/section/projects.html) -->
+    <section class="projects-section">
+      <div class="container">
+        <h2>프로젝트</h2>
+        <div id="projects-list">
+          <p class="muted">로딩 중...</p>
+        </div>
+        <div id="project-detail" style="display:none"></div>
+      </div>
+    </section>
+  </main>
   <div id="footer"></div>
+
+  <script>
+    $(function(){
+      if (window.initHeaderFooter) window.initHeaderFooter();
+      // 페이지가 준비되면 프로젝트 목록 로드
+      try { if (window.loadProjects) window.loadProjects(); } catch(e) { console.warn('loadProjects error', e); }
+    });
+  </script>
 </body>
 </html>
