--- a/html/section/projects.html
+++ b/html/section/projects.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2>프로젝트</h2>
     <div id="projects-list">
-      <p class="muted">로딩 중...</p>
+      <!-- <p class="muted">로딩 중...</p> -->
     </div>
     <div id="project-detail" style="display:none"></div>
   </div>
